<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/greenEllipseImageView"
            android:layout_width="410dp"
            android:layout_height="550dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_union_ellipse_green" />

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonStyle"
            android:layout_width="229dp"
            android:layout_height="65dp"
            android:layout_marginStart="99dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="150dp"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="36sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/forgettenPasswordTextView"
            android:layout_width="160dp"
            android:layout_height="31dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/inter"
            android:lineHeight="18dp"
            android:text="@string/forgotten_passwoard"
            android:gravity="center"
            android:textFontWeight="400"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/createAccountTextButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:lineHeight="18dp"
            android:text="@string/new_account"
            android:textAllCaps="false"
            android:textColor="#6B6B6B"
            android:textFontWeight="400"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/loginGreyEllipseImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/backspace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ellipse_grey"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/backspaceImageView"
            android:layout_width="17dp"
            android:layout_height="17dp"
            app:layout_constraintBottom_toBottomOf="@+id/loginGreyEllipseImageButton"
            app:layout_constraintEnd_toEndOf="@+id/loginGreyEllipseImageButton"
            app:layout_constraintStart_toStartOf="@+id/loginGreyEllipseImageButton"
            app:layout_constraintTop_toTopOf="@+id/loginGreyEllipseImageButton"
            app:srcCompat="@drawable/ic_vector__"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/backspace_icon" />

        <TextView
            android:id="@+id/usernameAndPasswordTextView"
            android:layout_width="338dp"
            android:layout_height="61dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="52dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:lineHeight="22dp"
            android:text="@string/enter_your_username_password"
            android:textAlignment="textStart"
            android:textColor="#565656"
            android:textFontWeight="600"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welocmeBackTextView"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/welocmeBackTextView"
            style="@style/titleTextView"
            android:layout_width="241dp"
            android:layout_height="61dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="149dp"
            android:text="@string/welcome_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="96dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/usernameAndPasswordTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:textColor="#6B6B6B"
                android:textColorHint="#6B6B6B"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#6B6B6B"
                android:textColorHint="#6B6B6B" />

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>