<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#000000"
        tools:context=".GetStartedActivity">

        <Button
            android:id="@+id/joinNowbutton"
            style="@style/ButtonStyle"
            android:layout_width="281dp"
            android:layout_marginStart="73dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="48dp"
            android:text="@string/join_now"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/getStartedTextView"
            android:layout_width="342dp"
            android:layout_height="190dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="156dp"
            android:fontFamily="@font/inter"
            android:lineHeight="75sp"
            android:text="@string/let_s_get_started"
            android:textColor="#000000"
            android:textFontWeight="800"
            android:textSize="75sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/growTogetherTextView"
            android:layout_width="143dp"
            android:layout_height="24dp"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/inter"
            android:text="@string/grow_together"
            android:textColor="#000000"
            android:textFontWeight="500"
            app:layout_constraintBottom_toBottomOf="@+id/getStartedTextView"
            app:layout_constraintStart_toStartOf="@+id/getStartedTextView" />

        <ImageView
            android:id="@+id/blueEllipseImageView"
            android:layout_width="394dp"
            android:layout_height="562dp"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="312dp"
            android:backgroundTint="#E5F0FF"
            android:contentDescription="@string/background_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_union_ellipse_blue"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="440dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/circleImageView"
            app:srcCompat="@drawable/image_smile" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/image_work"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/circleImageView" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>